correction d'affichage z-index des projet

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -119,7 +119,7 @@ strong {
 
 header {
   
- 
+
   display: flex;
   position: absolute;
   width: 80px;
@@ -162,7 +162,8 @@ main small {
   position: fixed;
   height: 100vh;
   width: 100%;
-  pointer-events: visible;
+  pointer-events: none;
+  z-index: 2;
 }
 #nav-container .bg {
   
@@ -179,9 +180,11 @@ main small {
 #nav-container:focus-within .bg {
   visibility: visible;
   opacity: .6;
+  
 }
 #nav-container * {
   visibility: visible;
+  
 }
 
 .button {
@@ -251,6 +254,7 @@ main small {
   height: 100%;
   display: flex;
   flex-direction: column;
+  
 }
 
 #nav-content li a {
@@ -258,6 +262,7 @@ main small {
   display: block;
   text-transform: uppercase;
   transition: color .1s;
+  
 }
 
 #nav-content li a:hover {
